--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
-
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +18,70 @@ body {
 }
 
 /* Write all remaining styles here */
+
+#zetsy {
+	font-size: 3em;
+	margin: 0 0 10px 0;
+}
+
+.picture img {
+	border: 4px solid grey;
+}
+
+.headers {
+	color: rgb(154, 172, 166);
+	font-family: 'Libre Baskerville', serif;
+
+}
+
+[class*="col-"] {
+	border: 3px solid rgba(170, 169, 182, 0.9);
+	/* float: left; */
+	margin: 0 2px;
+}
+
+.clearfix:after {
+   content: ".";
+   display: block;
+   clear: both;
+   visibility: hidden;
+   height: 0;
+   line-height: 0;
+}
+
+img {
+   max-width: 100%;
+}
+
+* {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
+.col-1 {
+	float: left;
+	width: 24.5%;
+
+}
+.col-2 {
+	float: left;
+	width: 24.5%;
+}
+.col-3 {
+	float: left;
+	width: 24.5%;
+}
+.col-4 {
+	float: left;
+	width: 24.5%;
+}
+
+.alr {
+	display: block;
+	float: right;
+}
+
+[class*="col-"]:hover {
+	border-color: black;
+}
